--- a/css/style.css
+++ b/css/style.css
@@ -174,7 +174,7 @@ main .section3 .imgbox{
 }
 main .section3 .imgbox img{
     width: 100%;
-    height: 100%;
+   
 }
 main .section3 .imgbox button {
     width: 100%;
@@ -194,8 +194,190 @@ main .section3 .imgbox:hover button{
     transform:translate(0px,0px) rotate(0deg);
 }
 
-main .section4{
+
+main .section4 ul{
     margin: auto;
+    margin-left:100px;
+    margin-top: 50px;
+}
+main .section4 ul li a{
+    color: black;
+}
+
+main .section4 .tab-content{
+    margin: auto;
+    padding:40px 0px;
+    background: #000;
+}
+
+main .section4 .rubbox{
+    max-width: 255px;
+    background: white;
+    position: relative;
+    overflow: hidden;
+}
+
+main .section4 .rubbox h4{
+    font-size: 12px;
+    font-weight: 400;
+    color: #373737;
+    text-transform: uppercase;
+    margin-top: 10px;
+}
+main .section4 .rubbox p{
+    font-size: 22px;
+    font-weight: 400;
+    color: #373737;
+    text-transform: uppercase;
+}
+main .section4 .rubbox .btn-group .btn{
+    background: #1f1f1f;
+    width: 125px;
+    height: 50px;
+    background: #1f1f1f;
+    border-radius:0;
+    color:white;
+}
+
+main .section4 .rubbox .triangle{
+    position:absolute;
+    width:100px;
+    height:100px;
+    left:0px;
+    top:0;
+    transform: translate(-50%, -50%) rotate(45deg);
+    background:#4c4c4c;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    opacity:0;
+    transition: 1s;
+}
+main .section4 .rubbox .triangle p{
+    transform: rotate(-45deg);
+    color: white;
+}
+
+main .section4 .rubbox .rectangle{
+    width: 71.5px;
+    height: 71.5px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: white;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    opacity:0;
+    transition: 1s;
+}
+
+main .section4 .rubbox:hover  .rectangle{
+    opacity:1;
+}
+
+main .section4 .rubbox:hover  .triangle{
+    opacity:1;
+}
+
+main .section4 .rubbox .rectangle p{
+    margin:0;
+}
+main .section5{
+    padding-top:25px;
+    background: #fafafa;
+}
+main .section5 .hr{
+    height: 2px;
+    background: grey;
+}
+
+main .section5 .btn-group .btn{
+    background: #1f1f1f;
+    width: 125px;
+    height: 50px;
+    background: #1f1f1f;
+    border-radius:0;
+    color:white;
+}
+
+main .section5 .rubbox{
+    max-width: 255px;
+    background: white;
+    position: relative;
+    overflow: hidden;
+    margin: 25px 0px;
+}
+
+main .section5 .rubbox h4{
+    font-size: 16px;
+    font-weight: 500;
+    color: #373737;
+    text-transform: uppercase;
+    margin-top: 10px;
+}
+main .section5 .rubbox p{
+    font-size: 22px;
+    font-weight: 500;
+    color: #373737;
+    text-transform: uppercase;
+}
+
+main .section5 h1{
+    font-size: 24px;
+    font-weight: 400;
+    color:#414141;
+    margin-top:30px;
+    text-align: center;
+}
+
+main .section5 span{
+    font-size: 14px;
+    font-weight: 400;
+    color:#999999;
+    margin-bottom:50px;
+    text-align: center;
+}
+
+footer{
+    background: #000;
+    padding:65px 0px 25px 0px;
+}
+
+footer h2{
+    font-size: 16px;
+    font-weight: 700;
+    color:white;
+}
+
+footer ul li{
+    list-style:none;
+}
+
+footer ul li a{
+    color:white;
+    text-decoration: none;
+}
+
+footer ul li a .fa{
+    width: 35px;
+    height: 35px;
+    background: #4c4c4b;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right:10px;
+}
+footer .end{
+    font-size: 11px;
+    color: white;
+    font-weight: 400;
+}
+
+footer p{
+    margin:0;
+    color: white;
 }
 
 @media (max-width:991px){
@@ -249,7 +431,7 @@ main .section4{
 }
 @media (max-width:575px){
     main .carousel-caption{
-        max-width: 155px;
+        max-width: 105px;
     }
     main .carousel-caption .btn-group .btn{
         width: 40px;
@@ -262,7 +444,7 @@ main .section4{
     }
     main .carousel-caption h5{
         
-        font-size: 25px;
+        font-size: 15px;
         
     }
     main .carousel-caption p{
