--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 header .header_top{
     background: #000;
     min-height: 30px;
+    padding:10px 0px;
 }
 header .header_top h1{
     color: white;
@@ -64,6 +65,7 @@ header .header_top a p{
 header .header_nav{
     background: #fafafa;
     min-height: 110px;
+    padding:20px 0px;
 }
 header .header_nav h1{
     font-size: 24px;
@@ -99,7 +101,7 @@ main section{
 }
 main .carousel-caption h5{
     color:#eee6e4;
-    font-size: 91px;
+    font-size: 71px;
     font-weight: 700;
     font-style: italic;
 }
@@ -197,7 +199,7 @@ main .section3 .imgbox:hover button{
 
 main .section4 ul{
     margin: auto;
-    margin-left:100px;
+    
     margin-top: 50px;
 }
 main .section4 ul li a{
@@ -445,6 +447,7 @@ footer p{
     main .carousel-caption h5{
         
         font-size: 15px;
+        margin: 0;
         
     }
     main .carousel-caption p{
@@ -452,6 +455,35 @@ footer p{
         font-size: 4px;
         font-weight: 400;
         text-transform: uppercase;
+        margin: 0;
+    }
+}
+
+@media (max-width:360px){
+    main .carousel-caption{
+        max-width: 85px;
+    }
+    main .carousel-caption .btn-group .btn{
+        width: 27px;
+        height: 8px;
+        background: #1f1f1f;
+        border-radius:0;
+        color:white;
+        font-size: 2px;
+        padding:1px 2px;
+    }
+    main .carousel-caption h5{
+        
+        font-size: 10px;
+        margin: 0;
+        
+    }
+    main .carousel-caption p{
+        color:#eee6e4;
+        font-size: 2px;
+        font-weight: 400;
+        text-transform: uppercase;
+        margin: 0;
     }
 }
 
