--- a/css/style.css
+++ b/css/style.css
@@ -460,31 +460,16 @@ footer p{
 }
 
 @media (max-width:360px){
-    main .carousel-caption{
-        max-width: 85px;
+    .carousel{
+        height: 200px;
     }
-    main .carousel-caption .btn-group .btn{
-        width: 27px;
-        height: 8px;
-        background: #1f1f1f;
-        border-radius:0;
-        color:white;
-        font-size: 2px;
-        padding:1px 2px;
+    .carousel-inner img{
+        height: 200px;
     }
-    main .carousel-caption h5{
-        
-        font-size: 10px;
-        margin: 0;
-        
+    .carousel-item{
+        height: 200px;
     }
-    main .carousel-caption p{
-        color:#eee6e4;
-        font-size: 2px;
-        font-weight: 400;
-        text-transform: uppercase;
-        margin: 0;
-    }
+    
 }
 
 
