--- a/css/style.css
+++ b/css/style.css
@@ -141,6 +141,7 @@ main .slide ol li{
 main .section2{
     margin-top:75px;
     background: #000;
+    padding: 15px 0px;
 }
 
 main .section2 p{
@@ -217,6 +218,7 @@ main .section4 .rubbox{
     background: white;
     position: relative;
     overflow: hidden;
+    margin:15px 0px;
 }
 
 main .section4 .rubbox h4{
@@ -408,6 +410,17 @@ footer p{
     }
 }
 @media (max-width:767px){
+    .carousel{
+        height: 400px;
+    }
+    .carousel-inner img{
+        height: 400px;
+    }
+    .carousel-item{
+        height: 400px;
+    }
+}
+@media (max-width:575px){
     main .carousel-caption{
         max-width: 255px;
     }
@@ -430,8 +443,6 @@ footer p{
         font-weight: 400;
         text-transform: uppercase;
     }
-}
-@media (max-width:575px){
     .carousel{
         height: 200px;
     }
@@ -441,19 +452,6 @@ footer p{
     .carousel-item{
         height: 200px;
     }
-}
-
-@media (max-width:360px){
-    .carousel{
-        height: 200px;
-    }
-    .carousel-inner img{
-        height: 200px;
-    }
-    .carousel-item{
-        height: 200px;
-    }
-    
 }
 
 
